--- a/style.css
+++ b/style.css
@@ -5,63 +5,105 @@
 }
 
 body{
-    background-color: #101010;
-}
-
-li, a{
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-    color: white;
+    margin: auto;
+    overflow-x: hidden;
 }
 
 header{
+    height: 100px;
+    background-color: #397367;
+}
+
+.menu{
+    display: none;
+}
+
+.nav_items{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 30px 10px;
+    width: 30%;
+    position: relative;
+    top: 5px;
+    left: 477px;
+    font-size: 18px;
+    list-style: none;
+    color: #35393C;
+}
+
+.logo i{
+    font-size: 33px;
+    position: relative;
+    top: 26px;
+    left: 73px;
+
+}
+
+.hero_img{
+    height: 400px;
+    /* background-color: #42858C; */
+    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/web-development-647_062317054646.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-size: 100% 400px;
+}
+
+.hero_txt{
+    position: relative;
+    top: 21%;
+    left: 36%;
+    font-size: 36px;
     color: white;
 }
 
-.nav_links li{
-    display: inline-block;
-    padding: 0px 20px;
-}
 
-.social_links li{
-    display: inline-block;
-    padding: 0 20px;
-}
 
-.social_links a{
-    font-size: 28px;
-}
-
-.about{
+.about_me{
+    height: 500px;
     display: flex;
-    justify-content: space-between;
+    background-color: #397367;
 }
 
-.about img{
-    width: 430px;
-    margin-top: 10%;
-    margin-left: 15%;
+.about_me h1{
+    position: relative;
+    top: 5%;
+    left: 46%;
+}
+
+.about_img{
+    height: 300px;
+    width: 30%;
+    position: relative;
+    top: 24%;
+    left: -1%;
+    background-color: orangered;
+}
+
+.about_img img{
+    width: 91%;
 }
 
 .about_txt{
-    color: white;
-    width: 800px;
-    margin-top: 5%;
-    margin-left: 15%;
-    line-height: 240%;
+    height: 300px;
+    width: 40%;
+    background-color: blue;
+    position: relative;
+    top: 24%;
+    left: 12%;
 }
 
+.about_txt h3{
+    line-height: 2;
+}
 
-.skill h1{
-    color: white;
+.skills{
+    height: 400px;
+    border: 2px solid blue;
+}
+
+.skills h1{
     text-align: center;
     position: relative;
-    top: 120px;
+    top: 40px;
 }
 
 .skills-bar{
@@ -73,7 +115,7 @@ header{
     /* position: absolute;
     top: 40px;
     left: 320px; */
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: 30%;
 }
 
@@ -176,6 +218,35 @@ span{
     color: white;
 }
 
+.contact_me{
+    height: 700px;
+    border: 2px solid green;
+    display: flex;
+}
+
+.contact_me h1{
+    text-align: center;
+    position: relative;
+    top: 40px;
+    left: 600px;
+}
+
+.map{
+    height: 300px;
+    width: 30%;
+    position: relative;
+    top: 180px;
+    left: -100px;
+    background-color: aqua;
+}
+
+.form{
+    height: 300px;
+    width: 40%;
+    margin-top: 14%;
+    margin-left: 10%;
+    /* background-color: coral; */
+}
 
 input[type=text], select, textarea {
     width: 100%;
@@ -197,34 +268,731 @@ input[type=text], select, textarea {
   input[type=submit]:hover {
     background-color: #45a049;
   }
-  
-  /* Style the container/contact section */
-  .container {
-    border-radius: 5px;
-    background-color: #101010;
-    padding: 10px;
-  }
-  
-  /* Create two columns that float next to eachother */
-  .column {
-    float: left;
-    width: 50%;
-    margin-top: 6px;
-    padding: 20px;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-.column{
-    color: white;
-}  
 
-footer{
-    color: white;
+.discuss{
+    height: 200px;
+    border: 2px solid orchid;
+}
+
+.discuss h1{
     text-align: center;
-}  
+    position: relative;
+    top: 50px;
+}
+
+.social{
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    font-size: 30px;
+    position: relative;
+    top: 90px;
+    left: 500px;
+    width: 20%;
+}
+
+.social li a{
+    color: #000;
+}
+footer{
+    height: 100px;
+    border: 2px solid ;
+}
+
+footer h1{
+    text-align: center;
+    position: relative;
+    top: 50px;
+}
+
+/* navbar responsive */
+
+@media screen and (max-width: 1051px) {
+    .nav_items{
+        margin-left: -120px;
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 787px) {
+    .nav_items{
+        margin-left: -260px;
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 624px) {
+    .nav_items{
+        display: none;
+    }
+
+    .menu{
+        display: block;
+        position: relative;
+        left: 500px;
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 548px) {
+    .nav_items{
+        display: none;
+    }
+
+    .menu{
+        display: block;
+        position: relative;
+        left: 430px;
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    body{
+        overflow-x: hidden;
+    }
+    .nav_items{
+        display: none;
+    }
+
+    .menu{
+        display: block;
+        position: relative;
+        left: 324px;
+        font-size: 30px;
+    }
+}
+
+
+@media screen and (max-width: 375px) {
+    .nav_items{
+        display: none;
+    }
+
+    .menu{
+        display: block;
+        position: relative;
+        left: 289px;
+        font-size: 30px;
+    }
+}
+/* navbar responsive ends */
+
+/* hero image resonsive starts */
+
+
+@media screen and (max-width: 750px) {
+    .hero_txt{
+        position: relative;
+        left: 18%;
+    }
+}
+
+@media screen and (max-width: 586px) {
+    .hero_txt{
+        position: relative;
+        left: 10%;
+    }
+}
+
+
+@media screen and (max-width: 534px) {
+    .hero_txt{
+        position: relative;
+        left: 5%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .hero_txt{
+        position: relative;
+        left: 3%;
+    }
+}
+
+/* hero image resonsive ends */
+
+/* about me responsive starts */
+
+@media screen and (max-width: 1194px) {
+   .about_txt{
+       width: 44%;
+   }
+
+   .about_img img{
+       width: 110%;
+   }
+}
+
+@media screen and (max-width: 1035px) {
+    .about_txt{
+        width: 52%;
+        margin-left: -12%;
+    }
+
+
+ 
+    .about_img img{
+        width: 110%;
+        position: relative;
+        right: 33%;
+    }
+ }
+
+ @media screen and (max-width: 920px) {
+    .about_txt{
+        width: 59%;
+        margin-left: -17%;
+    }
+
+
+ 
+    .about_img img{
+        width: 110%;
+        position: relative;
+        right: 33%;
+    }
+ }
+
+ @media screen and (max-width: 843px) {
+    .about_txt{
+        width: 59%;
+        margin-left: -19%;
+    }
+
+
+ 
+    .about_img img{
+        width: 110%;
+        position: relative;
+        right: 33%;
+    }
+ }
+
+ @media screen and (max-width: 815px) {
+    .about_txt{
+        width: 64%;
+        margin-left: -23%;
+    }
+
+
+ 
+    .about_img img{
+        width: 118%;
+        position: relative;
+        right: 48%;
+    }
+ }
+
+ @media screen and (max-width: 721px) {
+    .about_txt{
+        font-size: 15px;
+        /* width: 64%; */
+        margin-top: 35%;
+        margin-left: -45%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 290px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 200%;
+        position: relative;
+        bottom: 38%;
+        right: 1%;
+    }
+ }
+
+ @media screen and (max-width: 643px) {
+    .about_txt{
+        font-size: 15px;
+        width: 74%;
+        margin-top: 35%;
+        margin-left: -48%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 290px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 200%;
+        position: relative;
+        bottom: 38%;
+        right: 1%;
+    }
+ }
+
+ @media screen and (max-width: 583px) {
+    .about_txt{
+        font-size: 15px;
+        width: 74%;
+        margin-top: 35%;
+        margin-left: -48%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 250px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 200%;
+        position: relative;
+        bottom: 38%;
+        right: 1%;
+    }
+ }
+
+ @media screen and (max-width: 535px) {
+    .about_txt{
+        font-size: 15px;
+        width: 74%;
+        margin-top: 35%;
+        margin-left: -56%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 200px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 200%;
+        position: relative;
+        bottom: 38%;
+        right: 15%;
+    }
+ }
+
+ @media screen and (max-width: 375px) {
+    .about_txt{
+        font-size: 15px;
+        width: 74%;
+        margin-top: 35%;
+        margin-left: -56%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 137px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 200%;
+        position: relative;
+        bottom: 38%;
+        right: 50%;
+    }
+ }
+
+
+ @media screen and (max-width: 414px) {
+      body{
+          overflow-x: hidden;
+      }
+    .about_txt{
+        font-size: 15px;
+        width: 94%;
+        margin-top: 50%;
+        margin-left: -72%;
+    }
+
+    .about_me h1{
+        position: relative;
+        top: 15px;
+        left: 137px;
+    }
+    
+    .about_me{
+        height: 800px;
+    }
+    .about_img img{
+        width: 300%;
+        position: relative;
+        bottom: 38%;
+        right: 90%;
+    }
+ }
+
+ @media screen and (max-width: 360px) {
+    body{
+        overflow-x: hidden;
+    }
+  .about_txt{
+      font-size: 15px;
+      width: 94%;
+      margin-top: 50%;
+      margin-left: -77%;
+  }
+
+  .about_me h1{
+      position: relative;
+      top: 15px;
+      left: 137px;
+  }
+  
+  .about_me{
+      height: 800px;
+  }
+  .about_img img{
+      width: 300%;
+      position: relative;
+      bottom: 38%;
+      right: 110%;
+  }
+}
+
+/* about me responsive ends */
+
+/* Skills responsive starts */
+
+@media screen and (max-width: 1083px) {
+    .skills-bar{
+        position: relative;
+        right: 50px;
+    }
+}
+
+@media screen and (max-width: 830px) {
+    .skills-bar{
+        position: relative;
+        top: 30px;
+        right: 120px;
+    }
+}
+
+@media screen and (max-width: 710px) {
+    .skills-bar{
+        position: relative;
+        top: 30px;
+        right: 160px;
+    }
+}
+
+@media screen and (max-width: 642px) {
+    .skills-bar{
+        position: relative;
+        top: 30px;
+        right: 180px;
+    }
+}
+
+@media screen and (max-width: 602px) {
+    .skills-bar{
+        position: relative;
+        top: 30px;
+        right: 140px;
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .skills-bar{
+        position: relative;
+        top: 30px;
+        right: 100px;
+        width: 90%;
+    }
+}
+
+/* skills responsive ends */
+
+/* contact me responsive starts */
+
+@media screen and (max-width: 1275px) {
+    .form{
+        position: relative;
+        left: 30px;
+    }
+}
+
+@media screen and (max-width: 1201px) {
+    .form{
+        position: relative;
+        left: 50px;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 40px;
+    }
+}
+
+@media screen and (max-width: 1075px) {
+    .contact_me h1{
+        position: relative;
+        left: 490px;
+    }
+    .form{
+        position: relative;
+        left: -22px;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 40px;
+        width: 140%;
+    }
+}
+
+@media screen and (max-width: 906px) {
+    .contact_me h1{
+        position: relative;
+        left: 410px;
+    }
+    .form{
+        position: relative;
+        top: 40px;
+        left: -70px;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 40px;
+        width: 140%;
+    }
+}
+
+@media screen and (max-width: 819px) {
+    .contact_me h1{
+        position: relative;
+        left: 370px;
+        width: 40%;
+    }
+    .form{
+        position: relative;
+        top: 40px;
+        left: -30px;
+        width: 80%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 70px;
+        width: 220%;
+    }
+}
+
+@media screen and (max-width: 686px) {
+    .contact_me h1{
+        position: relative;
+        left: 260px;
+        width: 70%;
+    }
+    .form{
+        position: relative;
+        top: 40px;
+        left: -30px;
+        width: 80%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 270%;
+    }
+}
+
+@media screen and (max-width: 613px) {
+    .contact_me h1{
+        position: relative;
+        left: 260px;
+        width: 70%;
+    }
+
+    .contact_me{
+        height: 1200px;
+    }
+    .form{
+        position: relative;
+        top: 600px;
+        left: -340px;
+        width: 80%;
+    }
+
+    .column{
+        width: 240%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 680%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .contact_me h1{
+        position: relative;
+        left: 170px;
+        width: 70%;
+    }
+
+    .contact_me{
+        height: 1200px;
+    }
+    .form{
+        position: relative;
+        top: 600px;
+        left: -320px;
+        width: 80%;
+    }
+
+    .column{
+        width: 240%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 680%;
+    }
+}
+
+@media screen and (max-width: 546px) {
+    .contact_me h1{
+        position: relative;
+        left: 170px;
+        width: 70%;
+    }
+
+    .contact_me{
+        height: 1200px;
+    }
+    .form{
+        position: relative;
+        top: 600px;
+        left: -270px;
+        width: 80%;
+    }
+
+    .column{
+        width: 170%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 680%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .contact_me h1{
+        position: relative;
+        left: 170px;
+        width: 70%;
+    }
+
+    .contact_me{
+        height: 1200px;
+    }
+    .form{
+        position: relative;
+        top: 600px;
+        left: -170px;
+        width: 80%;
+    }
+
+    .column{
+        width: 170%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 680%;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .contact_me h1{
+        position: relative;
+        left: 170px;
+        width: 70%;
+    }
+
+    .contact_me{
+        height: 1200px;
+    }
+    .form{
+        position: relative;
+        top: 600px;
+        left: -190px;
+        width: 80%;
+    }
+
+    .column{
+        width: 170%;
+    }
+
+    .map iframe{
+        position: relative;
+        right: 100px;
+        width: 680%;
+    }
+}
+
+/* discuss section starts */
+
+@media screen and (max-width: 1126px) {
+    .social{
+        position: relative;
+        left: 430px;
+    }
+}
+
+@media screen and (max-width: 935px) {
+    .social{
+        position: relative;
+        left: 360px;
+    }
+}
+
+@media screen and (max-width: 748px) {
+    .social{
+        position: relative;
+        left: 240px;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 612px) {
+    .social{
+        position: relative;
+        left: 180px;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .social{
+        position: relative;
+        left: 113px;
+        width: 50%;
+    }
+}
